<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/shopping_label"
        style="@style/style_label"/>

    <TextView
        android:text="@string/shopping_description"
        style="@style/style_description"/>

    <TextView
        android:text="@string/album_example_label"
        style="@style/style_artist_label"/>

    <Button
        android:id="@+id/buy_button_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_button_shopping"
        android:layout_gravity="center"
        android:layout_margin="32dp"/>

</LinearLayout>
