<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/artist_lib_label"
        style="@style/style_label"/>

    <TextView
        android:text="@string/artist_lib_description"
        style="@style/style_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/artist_example_label"
                style="@style/style_artist_label"
                />

            <TextView
                android:text="@string/artist_example_subtext"
                style="@style/style_artist_subtext"
                />

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_button_artist_lib"
            android:text="@string/library_play_button"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/albums_lib_launcher"
            android:text="@string/see_albums"
            android:layout_toLeftOf="@id/play_button_artist_lib"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>

</LinearLayout>